# code-names-ai

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  docker-compose.yml  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  docker.yml
config/: base.yaml  default.yaml  learned.yaml  tune_llm_guesser.yaml  tune_no_llm_ev_aggressive.yaml  tune_no_llm_ev_balanced.yaml
deploy/nginx/: default.conf
issues/: 0001-codenames-ai-agent.md
scripts/: docker-entrypoint.sh
src/codenames_ai/: __init__.py  config.py  storage.py
tests/: test_agent_guesser.py  test_agent_rerank.py  test_agent_scoring.py  test_agent_spymaster.py  test_ai_vs_ai.py  test_api_games.py  test_cli_main.py  test_embedding_builder.py  test_embedding_fasttext.py  test_embedding_matrix.py  test_eval_config_yaml.py  test_eval_metrics.py  test_eval_persist.py  test_eval_tournament.py  test_game_board.py  test_game_orchestrator.py  test_game_rules.py  test_game_state.py  test_golden_boards.py  test_human_clue_legality.py  test_human_player.py  test_learn_league.py  test_live_rooms.py  test_llm_cache.py  test_llm_guess_policy.py  test_llm_guess_scorer.py  test_llm_guesser.py  test_llm_provider.py  test_llm_real_api.py  test_pwa_mount.py  test_request_url.py  test_risk_context.py  test_single_turn.py  test_smoke.py  test_vocab_builder.py  test_vocab_end_to_end.py  test_vocab_filters.py  test_vocab_models.py  test_web_smoke.py
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.css  App.tsx  (+3 more)
(+92 files in other folders)
